@@ -15,8 +15,8 @@
 .SH NAME
 patool - simple manager for file archives of various types
 .SH SYNOPSIS
- \fBpatool\fP (\fBextract\fP|\fBlist\fP|\fBtest\fP) [\fIoptions\fP] <\fIarchive-file\fP>
- \fBpatool\fP \fBcreate\fP [\fIoptions\fP] <\fIarchive-file\fP> [\fIfiles\fP..]
+ \fBpatool\fP (\fBextract\fP|\fBlist\fP|\fBtest\fP) [\fIoptions\fP] <\fIarchive-file\fP>...
+ \fBpatool\fP \fBcreate\fP [\fIoptions\fP] <\fIarchive-file\fP> [\fIfiles\fP...]
  \fBpatool\fP \fBformats\fP [\fIoptions\fP]
 .SH DESCRIPTION
 Various archive types can be created, extracted, tested and listed by
@@ -32,6 +32,11 @@ RPM (.rpm), DEB (.deb), LZIP (.lz), LZOP (.lzo), LZMA (.lzma), RAR (.rar)
 and XZ (.xz) formats.
 It relies on helper applications to handle those archive formats
 (for example bzip2 for BZIP2 archives).
+.SH EXAMPLES
+  \fBpatool extract archive.zip\fP
+  \fBpatool test --verbose dist.tar.gz\fP
+  \fBpatool list package.deb\fP
+  \fPpatool create --verbose myfiles.zip file1.txt dir/\fP
 .SH COMMANDS
 Several commands and options are available.
 .SS \fBextract\fP
@@ -60,10 +65,11 @@ Verbose archive listing (if the helper application supports it).
 \fB\-\-help\fP
 Show help for this command.
 .SS \fBcreate\fP
-Create an archive from given files.
-.\" .TP
-.\" \fB\-v\fP, \fB\-\-verbose\fP
-.\" Verbose operation (if the helper application supports it).
+Create an archive from given files. At least on of the given files to add
+to the archive has to exist.
+.TP
+\fB\-v\fP, \fB\-\-verbose\fP
+Verbose operation (if the helper application supports it).
 .TP
 \fB\-\-help\fP
 Show help for this command.
