@@ -2,6 +2,7 @@
 
   * Remove the --force option. Local files are now never overwritten.
   * Added option alias -v for --verbose.
+  * Added --verbose option to create command.
 
 0.5 "Vanishing Point" (released 4.3.2010)
 
